refactoring + fix padding in tours block

--- a/geo.html
+++ b/geo.html
@@ -358,7 +358,7 @@
           <h2 class="title title__inner">ერთდღიანი Sup ტურები</h2>
         </div>
         <img src="./images/images/tours_left.webp" alt="" class="block-image grid-left" loading="lazy">
-        <div class="grid-right weather__description">
+        <div class="grid-right tours__block-right">
           <p class="text">ჩვემ ვატარებთ საპ ტურებს თბილისთან ახლოს ჟინვალის წყალსაცავთან, სიონის მდინარესთან, ფარავანის
             მდინარესთან, წალკისის წყალსაცავთან, ბაზალეთის ტბასთან. ტრანსფერს თბილისიდან და უკან საკუთარ თავზე ვიღებთ.
           </p>
