--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
         </div>
         <img src="./images/images/tours_left.webp" alt="" class="block-image grid-left" loading="lazy">
 
-        <div class="grid-right weather__description">
+        <div class="grid-right tours__block-right">
           <p class="text">Мы устраиваем sup туры недалеко от Тбилиси на Жинвальское водохранилище, озеро Сиони, озеро
             Паравани, Цалкинское водохранилище, озеро Базалети. Можем организовать трансфер либо просто доставить
             оборудование на необходимую локацию.</p>
