--- a/supsurfing-en.html
+++ b/supsurfing-en.html
@@ -357,7 +357,7 @@
           <h2 class="title title__inner">One-day Sup tours</h2>
         </div>
         <img src="./images/images/tours_left.webp" alt="" class="block-image grid-left" loading="lazy">
-        <div class="grid-right weather__description">
+        <div class="grid-right tours__block-right">
           <p class="text">We arrange transfer or deliver supboards from Tbilisi to Zhinvali reservoir, Sioni lake,
             Paravani lake, Tsalkinskoye reservoir, Bazaleti lake. We take care of the transfer from Tbilisi and back.
           </p>
