add animations to RU version

--- a/index.html
+++ b/index.html
@@ -138,10 +138,11 @@
   <div class="about block__pd-top" id="about">
     <div class="container container-grid ">
       <div class="grid-title">
-        <h2 class="title title__inner animate__visiable-custom animate__animated">О нас</h2>
+        <h2 class="title title__inner animate__animated fade__left animate__visiable-custom">О нас</h2>
       </div>
-      <img src="./images/images/about.webp" alt="" class="block-image grid-left">
-      <div class="grid-right animate__visiable-custom animate__animated">
+      <img src="./images/images/about.webp" alt=""
+        class="block-image grid-left animate__animated animate__visiable-custom fade__in">
+      <div class="grid-right animate__visiable-custom animate__animated fade__left">
         <p class="text about__text">
           SUP - гребля одним веслом на доске. Подходит для людей всех возрастов и уровней подготовки, очень прост в
           освоении.
@@ -168,10 +169,11 @@
           data-raincolor="#ffffff">TBILISI WEATHER</a>
       </div>
       <div class="grid-title">
-        <h2 class="title title__inner animate__visiable-custom animate__animated">Погода для sup серфинга</h2>
+        <h2 class="title title__inner animate__visiable-custom animate__animated fade__left">Погода для sup серфинга
+        </h2>
       </div>
 
-      <div class="grid-right weather__description animate__visiable-custom animate__animated">
+      <div class="grid-right weather__description animate__visiable-custom animate__animated fade__right">
         <p class="text weather__text">
           Для сап-серфинга, как и для любых других видов водного спорта, погода играет важную роль. Сильный ветер
           или штормовые условия могут сделать sup серфинг небезопасным и неудобным. Кроме того, погода может влиять на
@@ -361,11 +363,12 @@
     <div class="container">
       <div class="container-grid">
         <div class="grid-title">
-          <h2 class="title title__inner animate__visiable-custom animate__animated">Однодневные Sup туры</h2>
+          <h2 class="title title__inner animate__visiable-custom animate__animated fade__left">Однодневные Sup туры</h2>
         </div>
-        <img src="./images/images/tours_left.webp" alt="" class="block-image grid-left" loading="lazy">
+        <img src="./images/images/tours_left.webp" alt=""
+          class="block-image grid-left animate__animated animate__visiable-custom fade__in" loading="lazy">
 
-        <div class="grid-right tours__block-right animate__visiable-custom animate__animated">
+        <div class="grid-right tours__block-right animate__visiable-custom animate__animated fade__left">
           <p class="text">Мы устраиваем sup туры недалеко от Тбилиси на Жинвальское водохранилище, озеро Сиони, озеро
             Паравани, Цалкинское водохранилище, озеро Базалети. Можем организовать трансфер либо просто доставить
             оборудование на необходимую локацию.</p>
@@ -412,7 +415,7 @@
     </div>
   </div>
 
-  <div class="instagram block__pd-top animate__visiable-custom animate__animated">
+  <div class="instagram block__pd-top animate__visiable-custom animate__animated fade__left">
     <div class="container">
       <div class="row instagram__header">
         <h2 class="title">Подпишитесь на наш Instagram</h2>
