add fadeIn animation + paddings fix

--- a/geo.html
+++ b/geo.html
@@ -71,7 +71,8 @@
 
   </header>
   <div class="connect none">
-    <button class="connect__btn hvra-radial-out">გასეირნების დაჯავშნა</button>
+    <button class="connect__btn hvra-radial-out animate__animated animate__visiable-custom fade__in">გასეირნების
+      დაჯავშნა</button>
     <div class="connect__links connect__links_hidden">
 
       <a href="https://t.me/supsurfge" class="connect__link connect__telegram" target="_blank">
@@ -127,7 +128,7 @@
     </div>
   </div>
   <div class="hero">
-    <div class="container">
+    <div class="container animate__animated animate__visiable-custom fade__in">
 
       <h1 class="hero__title">Sup surfing
         თბილისში</h1>
@@ -136,7 +137,7 @@
     </div>
   </div>
 
-  <div class="about block__pd-top" id="about">
+  <div class="about block__pd-top animate__animated animate__visiable-custom fade__in" id="about">
     <div class="container container-grid">
       <div class="grid-title">
         <h2 class="title title__inner">ჩვენს შესახებ</h2>
@@ -157,7 +158,7 @@
   </div>
 
 
-  <div class="weather block__pd-top">
+  <div class="weather block__pd-top animate__animated animate__visiable-custom fade__in">
 
     <div class="container container-grid weather__container">
       <div class="weather__widget">
@@ -182,7 +183,7 @@
   </div>
 
   <div class="rent block__pd-top-bottom" id="rent">
-    <div class="container">
+    <div class="container animate__animated animate__visiable-custom fade__in">
       <h2 class="rent__title">SUP დაფის დაქირავება<br>
         რა შედის გაქირავებაში?</h2>
       <div class="row rent__row">
@@ -248,10 +249,10 @@
     </div>
   </div>
 
-  <div class="gift block__pd-top">
+  <div class="gift block__pd-top animate__animated animate__visiable-custom fade__in">
     <div class="container">
       <div class="container-grid gift__container-grid">
-        <div class="grid-left">
+        <div class="grid-left gift__grid-left">
           <h2 class="title title__outer">სასაჩუქრე სეტიფიკატი</h2>
           <p class="text gift__text">თქვენ ასევე შესძლებთ შეიძინოთ სასაჩუქრე სერტიფიკატი, მისი ღირებულება უდრის
             საათობრივ გაქირავებას.</p>
@@ -271,7 +272,7 @@
             <button type="submit" class="form__submit hvr--radial-out">განაცხადის გაგზავნა</button>
           </form>
         </div>
-        <div class="grid-right">
+        <div class="grid-right gift__grid-right">
           <div class="gift__card gift-card">
             <div class="gift-card__head">
               <img src="./images/logo/logo.svg" alt="" class="gift-card__logo">
@@ -291,7 +292,7 @@
     </div>
   </div>
 
-  <div class="services block__pd-top">
+  <div class="services block__pd-top animate__animated animate__visiable-custom fade__in">
     <div class="container">
       <h2 class="title title__outer">დამატებითი მომსახურება</h2>
 
@@ -353,7 +354,7 @@
     </div>
   </div>
 
-  <div class="tours block__pd-top" id="tours">
+  <div class="tours block__pd-top animate__animated animate__visiable-custom fade__in" id="tours">
     <div class="container">
       <div class="container-grid">
         <div class="grid-title">
@@ -405,7 +406,7 @@
     </div>
   </div>
 
-  <div class="instagram block__pd-top">
+  <div class="instagram block__pd-top animate__animated animate__visiable-custom fade__in">
     <div class="container">
       <div class="row instagram__header">
         <h2 class="title">გამოიწერეთ ჩვენი ინსტაგრამი</h2>
@@ -425,7 +426,7 @@
     </div>
   </div>
 
-  <div class="contacts block__pd-top" id="contacts">
+  <div class="contacts block__pd-top animate__animated animate__visiable-custom fade__in" id="contacts">
     <div class="container">
       <h2 class="title title__outer">სად გვიპოვით?</h2>
 
@@ -530,6 +531,7 @@
   <script type="module" src="./js/scroll.js"></script>
   <script type="module" src="./js/menu.js"></script>
   <script type="module" src="./js/connect.js"></script>
+  <script type="module" src="./js/animate.js"></script>
 
   <script>
     !function (d, s, id) { var js, fjs = d.getElementsByTagName(s)[0]; if (!d.getElementById(id)) { js = d.createElement(s); js.id = id; js.src = 'https://weatherwidget.io/js/widget.min.js'; fjs.parentNode.insertBefore(js, fjs); } }(document, 'script', 'weatherwidget-io-js');
