--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
 
   </header>
   <div class="connect none">
-    <button class="connect__btn hvra-radial-out">Забронируйте прогулку</button>
+    <button class="connect__btn hvra-radial-out animate__animated animate__visiable-custom fade__in">Забронируйте
+      прогулку</button>
     <div class="connect__links connect__links_hidden">
 
       <a href="https://t.me/supsurfge" class="connect__link connect__telegram" target="_blank">
@@ -126,7 +127,7 @@
     </div>
   </div>
   <div class="hero">
-    <div class="container">
+    <div class="container animate__animated animate__visiable-custom fade__in">
 
       <h1 class="hero__title">Sup surfing<br>
         в Тбилиси</h1>
@@ -135,14 +136,13 @@
     </div>
   </div>
 
-  <div class="about block__pd-top" id="about">
+  <div class="about block__pd-top animate__animated animate__visiable-custom fade__in" id="about">
     <div class="container container-grid ">
       <div class="grid-title">
-        <h2 class="title title__inner animate__animated fade__left animate__visiable-custom">О нас</h2>
+        <h2 class="title title__inner">О нас</h2>
       </div>
-      <img src="./images/images/about.webp" alt=""
-        class="block-image grid-left animate__animated animate__visiable-custom fade__in">
-      <div class="grid-right animate__visiable-custom animate__animated fade__left">
+      <img src="./images/images/about.webp" alt="" class="block-image grid-left">
+      <div class="grid-right">
         <p class="text about__text">
           SUP - гребля одним веслом на доске. Подходит для людей всех возрастов и уровней подготовки, очень прост в
           освоении.
@@ -159,7 +159,7 @@
   </div>
 
 
-  <div class="weather block__pd-top">
+  <div class="weather block__pd-top animate__animated animate__visiable-custom fade__in">
 
     <div class="container container-grid weather__container">
       <div class="weather__widget">
@@ -169,11 +169,11 @@
           data-raincolor="#ffffff">TBILISI WEATHER</a>
       </div>
       <div class="grid-title">
-        <h2 class="title title__inner animate__visiable-custom animate__animated fade__left">Погода для sup серфинга
+        <h2 class="title title__inner">Погода для sup серфинга
         </h2>
       </div>
 
-      <div class="grid-right weather__description animate__visiable-custom animate__animated fade__right">
+      <div class="grid-right weather__description">
         <p class="text weather__text">
           Для сап-серфинга, как и для любых других видов водного спорта, погода играет важную роль. Сильный ветер
           или штормовые условия могут сделать sup серфинг небезопасным и неудобным. Кроме того, погода может влиять на
@@ -184,7 +184,7 @@
   </div>
 
   <div class="rent block__pd-top-bottom" id="rent">
-    <div class="container">
+    <div class="container animate__animated animate__visiable-custom fade__in">
       <h2 class="rent__title">Аренда сап борда<br>
         Что входит в аренду?</h2>
       <div class="row rent__row">
@@ -254,9 +254,9 @@
   </div>
 
   <div class="gift block__pd-top">
-    <div class="container">
+    <div class="container animate__animated animate__visiable-custom fade__in">
       <div class="container-grid gift__container-grid">
-        <div class="grid-left">
+        <div class="grid-left gift__grid-left">
           <h2 class="title title__outer">Подарочный сертификат</h2>
           <p class="text gift__text">Также вы можете приобрести подарочный сертификат. Стоимость равна почасовой аренды.
           </p>
@@ -274,7 +274,7 @@
             <button type="submit" class="form__submit hvr--radial-out">Отправить заявку</button>
           </form>
         </div>
-        <div class="grid-right">
+        <div class="grid-right gift__grid-right">
           <div class="gift__card gift-card">
             <div class="gift-card__head">
               <img src="./images/logo/logo.svg" alt="" class="gift-card__logo">
@@ -295,7 +295,7 @@
   </div>
 
   <div class="services block__pd-top">
-    <div class="container">
+    <div class="container animate__animated animate__visiable-custom fade__in">
       <h2 class="title title__outer">Дополнительные услуги</h2>
 
       <div class="grid-item main">
@@ -359,16 +359,15 @@
     </div>
   </div>
 
-  <div class="tours block__pd-top" id="tours">
+  <div class="tours block__pd-top animate__animated animate__visiable-custom fade__in" id="tours">
     <div class="container">
       <div class="container-grid">
         <div class="grid-title">
-          <h2 class="title title__inner animate__visiable-custom animate__animated fade__left">Однодневные Sup туры</h2>
+          <h2 class="title title__inner">Однодневные Sup туры</h2>
         </div>
-        <img src="./images/images/tours_left.webp" alt=""
-          class="block-image grid-left animate__animated animate__visiable-custom fade__in" loading="lazy">
+        <img src="./images/images/tours_left.webp" alt="" class="block-image grid-left" loading="lazy">
 
-        <div class="grid-right tours__block-right animate__visiable-custom animate__animated fade__left">
+        <div class="grid-right tours__block-right">
           <p class="text">Мы устраиваем sup туры недалеко от Тбилиси на Жинвальское водохранилище, озеро Сиони, озеро
             Паравани, Цалкинское водохранилище, озеро Базалети. Можем организовать трансфер либо просто доставить
             оборудование на необходимую локацию.</p>
@@ -415,7 +414,7 @@
     </div>
   </div>
 
-  <div class="instagram block__pd-top animate__visiable-custom animate__animated fade__left">
+  <div class="instagram block__pd-top animate__animated animate__visiable-custom fade__in">
     <div class="container">
       <div class="row instagram__header">
         <h2 class="title">Подпишитесь на наш Instagram</h2>
@@ -435,7 +434,7 @@
     </div>
   </div>
 
-  <div class="contacts block__pd-top" id="contacts">
+  <div class="contacts block__pd-top animate__animated animate__visiable-custom fade__in" id="contacts">
     <div class="container">
       <h2 class="title title__outer">Где нас можно найти?</h2>
 
