--- a/supsurfing-en.html
+++ b/supsurfing-en.html
@@ -70,7 +70,8 @@
 
   </header>
   <div class="connect none">
-    <button class="connect__btn hvra-radial-out">Book a supsurf trip</button>
+    <button class="connect__btn hvra-radial-out animate__animated animate__visiable-custom fade__in">Book a supsurf
+      trip</button>
     <div class="connect__links connect__links_hidden">
 
       <a href="https://t.me/supsurfge" class="connect__link connect__telegram" target="_blank">
@@ -126,7 +127,7 @@
     </div>
   </div>
   <div class="hero">
-    <div class="container">
+    <div class="container animate__animated animate__visiable-custom fade__in">
 
       <h1 class="hero__title">Sup surfing
         in Tbilisi</h1>
@@ -135,7 +136,7 @@
     </div>
   </div>
 
-  <div class="about block__pd-top" id="about">
+  <div class="about block__pd-top animate__animated animate__visiable-custom fade__in" id="about">
     <div class="container container-grid">
       <div class="grid-title">
         <h2 class="title title__inner">About us</h2>
@@ -157,7 +158,7 @@
   </div>
 
 
-  <div class="weather block__pd-top">
+  <div class="weather block__pd-top animate__animated animate__visiable-custom fade__in">
 
     <div class="container container-grid weather__container">
       <div class="weather__widget">
@@ -181,7 +182,7 @@
   </div>
 
   <div class="rent block__pd-top-bottom" id="rent">
-    <div class="container">
+    <div class="container animate__animated animate__visiable-custom fade__in">
       <h2 class="rent__title">Supboards rent<br>
         What is included in the rental?</h2>
       <div class="row rent__row">
@@ -246,10 +247,10 @@
     </div>
   </div>
 
-  <div class="gift block__pd-top">
+  <div class="gift block__pd-top animate__animated animate__visiable-custom fade__in">
     <div class="container">
       <div class="container-grid gift__container-grid">
-        <div class="grid-left">
+        <div class="grid-left gift__grid-left">
           <h2 class="title title__outer">Gift certificate</h2>
           <p class="text gift__text">Gift cards are available for purchase at the same price as per-hour rentals
           </p>
@@ -268,7 +269,7 @@
             <button type="submit" class="form__submit hvr--radial-out">Send an application</button>
           </form>
         </div>
-        <div class="grid-right">
+        <div class="grid-right gift__grid-right">
           <div class="gift__card gift-card">
             <div class="gift-card__head">
               <img src="./images/logo/logo.svg" alt="" class="gift-card__logo">
@@ -288,7 +289,7 @@
     </div>
   </div>
 
-  <div class="services block__pd-top">
+  <div class="services block__pd-top animate__animated animate__visiable-custom fade__in">
     <div class="container">
       <h2 class="title title__outer">Additional service</h2>
 
@@ -352,7 +353,7 @@
     </div>
   </div>
 
-  <div class="tours block__pd-top" id="tours">
+  <div class="tours block__pd-top animate__animated animate__visiable-custom fade__in" id="tours">
     <div class="container">
       <div class="container-grid">
         <div class="grid-title">
@@ -405,7 +406,7 @@
     </div>
   </div>
 
-  <div class="instagram block__pd-top">
+  <div class="instagram block__pd-top animate__animated animate__visiable-custom fade__in">
     <div class="container">
       <div class="row instagram__header">
         <h2 class="title">Follow is in Instagram</h2>
@@ -424,7 +425,7 @@
     </div>
   </div>
 
-  <div class="contacts block__pd-top" id="contacts">
+  <div class="contacts block__pd-top animate__animated animate__visiable-custom fade__in" id="contacts">
     <div class="container">
       <h2 class="title title__outer">How to find us</h2>
 
@@ -528,6 +529,7 @@
   <script type="module" src="./js/scroll.js"></script>
   <script type="module" src="./js/menu.js"></script>
   <script type="module" src="./js/connect.js"></script>
+  <script type="module" src="./js/animate.js"></script>
 
   <script>
     !function (d, s, id) { var js, fjs = d.getElementsByTagName(s)[0]; if (!d.getElementById(id)) { js = d.createElement(s); js.id = id; js.src = 'https://weatherwidget.io/js/widget.min.js'; fjs.parentNode.insertBefore(js, fjs); } }(document, 'script', 'weatherwidget-io-js');
