--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
   <link rel="stylesheet" href="./css/main.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 
-  <link rel="icon" href="./images/favicon/favicon-48x48.ico">
-  <link rel="shortcut icon" href="./images/logo/favicon.ico">
+  <link rel="icon" sizes="120x120" href="./images/favicon/120x120-fav.ico" type="image/x-icon">
+  <link rel="icon" href="./images/favicon/favicon-48x48.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="./images/logo/favicon.ico" type="image/x-icon">
   <link rel="apple-touch-icon" sizes="76x76" href="./images/favicon/apple-touch-icon-76x76.png">
   <link rel="apple-touch-icon" sizes="120x120" href="./images/favicon/apple-touch-icon-120x120.png">
   <link rel="apple-touch-icon" sizes="152x152" href="./images/favicon/apple-touch-icon-152x152.png">
