--- a/supsurfing-en.html
+++ b/supsurfing-en.html
@@ -18,6 +18,7 @@
   <link rel="stylesheet" href="./css/main.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 
+  <link rel="icon" sizes="120x120" href="./images/favicon/120x120-fav.ico" type="image/x-icon">
   <link rel="icon" href="./images/favicon/favicon-48x48.ico">
   <link rel="shortcut icon" href="./images/logo/favicon.ico">
   <link rel="apple-touch-icon" sizes="76x76" href="./images/favicon/apple-touch-icon-76x76.png">
