add canoical links

--- a/geo.html
+++ b/geo.html
@@ -31,6 +31,7 @@
   <title>Sup surfing თბილისში | SUP დაფის დაქირავება</title>
   <meta name="description"
     content="გასეირნება საპ დაფებზე, დაფების გაქირავება, ერთდღიანი ტურების ჩატარება. 20 ლარიდან. გასეირნების დაჯავშნა!">
+  <link rel="canonical" href="/geo.html" />
 
 </head>
 
