--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
   <title>Sup surfing в Тбилиси | Аренда sup-досок</title>
   <meta name="description"
     content="Sup surfing в Тбилиси: прогулки на sup бордах, аренда досок, организация однодневных туров. Работаем ежедневно. Аренда от 20₾. Ждем вас!">
+  <link rel="canonical" href="/" />
 </head>
 
 <body class="body" id="top">
