--- a/supsurfing-en.html
+++ b/supsurfing-en.html
@@ -32,6 +32,7 @@
   <meta name="description"
     content="Sup surfing in Tbilisi: supboard trips, supboards for rent, organization of one-day tours. Open daily. Price from 20 ₾. Book a supsurf trip!">
 </head>
+<link rel="canonical" href="/supsurfing-en.html" />
 
 <body class="body" id="top">
 
