add schema markup

--- a/index.html
+++ b/index.html
@@ -579,6 +579,45 @@
     <div><img src="https://mc.yandex.ru/watch/94036119" style="position:absolute; left:-9999px;" alt="" /></div>
   </noscript>
   <!-- /Yandex.Metrika counter -->
+
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "SportsActivityLocation",
+      "name": "Sup surfing в Тбилиси",
+      "image": "https://tbilisi-sup.ge/images/images/about.webp",
+      "@id": "",
+      "url": "https://tbilisi-sup.ge/",
+      "telephone": "+995599167632",
+      "priceRange": "20 - 80 gel",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "Тбилисское море",
+        "addressLocality": "Тбилиси",
+        "postalCode": "",
+        "addressCountry": "GE"
+      },
+      "geo": {
+        "@type": "GeoCoordinates",
+        "latitude": 41.74257242629373,
+        "longitude": 44.83941669168688
+      },
+      "openingHoursSpecification": {
+        "@type": "OpeningHoursSpecification",
+        "dayOfWeek": [
+          "Monday",
+          "Tuesday",
+          "Wednesday",
+          "Thursday",
+          "Friday",
+          "Saturday",
+          "Sunday"
+        ],
+        "opens": "08:00",
+        "closes": "21:00"
+      }
+    }
+    </script>
 </body>
 
 </html>
