--- a/supsurfing-en.html
+++ b/supsurfing-en.html
@@ -569,6 +569,44 @@
   </noscript>
   <!-- /Yandex.Metrika counter -->
 
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "SportsActivityLocation",
+      "name": "Sup surfing in Tbilisi",
+      "image": "https://tbilisi-sup.ge/images/images/about.webp",
+      "@id": "",
+      "url": "https://tbilisi-sup.ge/supsurfing-en.html",
+      "telephone": "+995599167632",
+      "priceRange": "20 - 80 gel",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "Georgia Tbilisi Sea",
+        "addressLocality": "Tbilisi",
+        "postalCode": "",
+        "addressCountry": "GE"
+      },
+      "geo": {
+        "@type": "GeoCoordinates",
+        "latitude": 41.74257242629373,
+        "longitude": 44.83941669168688
+      },
+      "openingHoursSpecification": {
+        "@type": "OpeningHoursSpecification",
+        "dayOfWeek": [
+          "Monday",
+          "Tuesday",
+          "Wednesday",
+          "Thursday",
+          "Friday",
+          "Saturday",
+          "Sunday"
+        ],
+        "opens": "08:00",
+        "closes": "21:00"
+      }
+    }
+    </script>
 </body>
 
 </html>
