Add sameAs item to schema markup

--- a/geo.html
+++ b/geo.html
@@ -604,7 +604,12 @@
         ],
         "opens": "08:00",
         "closes": "21:00"
-      }
+      },
+      "sameAs": [
+        "https://tbilisi-sup.ge/supsurfing-en.html",
+        "https://www.instagram.com/sup.ge/",
+        "https://www.facebook.com/groups/5842742862421269"
+      ]
     }
     </script>
 </body>
