Add OG markup, new favicon

--- a/geo.html
+++ b/geo.html
@@ -18,6 +18,8 @@
   <link rel="stylesheet" href="./css/main.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 
+
+  <link rel="icon" sizes="120x120" href="/120x120-fav.ico" type="image/x-icon">
   <link rel="icon" sizes="120x120" href="./images/favicon/120x120-fav.ico" type="image/x-icon">
   <link rel="icon" href="./images/favicon/favicon-48x48.ico">
   <link rel="shortcut icon" href="./images/logo/favicon.ico">
@@ -32,6 +34,13 @@
   <meta name="description"
     content="გასეირნება საპ დაფებზე, დაფების გაქირავება, ერთდღიანი ტურების ჩატარება. 20 ლარიდან. გასეირნების დაჯავშნა!">
   <link rel="canonical" href="/geo.html" />
+
+  <meta property="og:url" content="https://tbilisi-sup.ge/geo.html">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Sup surfing თბილისში | SUP დაფის დაქირავება">
+  <meta property="og:description"
+    content="გასეირნება საპ დაფებზე, დაფების გაქირავება, ერთდღიანი ტურების ჩატარება. 20 ლარიდან. გასეირნების დაჯავშნა!">
+  <meta property="og:image" content="./images/instagramm/8-inst.webp">
 
 </head>
 
