--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <link rel="stylesheet" href="./css/main.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 
+  <link rel="icon" sizes="120x120" href="/120x120-fav.ico" type="image/x-icon">
   <link rel="icon" sizes="120x120" href="./images/favicon/120x120-fav.ico" type="image/x-icon">
   <link rel="icon" href="./images/favicon/favicon-48x48.ico" type="image/x-icon">
   <link rel="shortcut icon" href="./images/logo/favicon.ico" type="image/x-icon">
@@ -32,6 +33,13 @@
   <meta name="description"
     content="Sup surfing в Тбилиси: прогулки на sup бордах, аренда досок, организация однодневных туров. Работаем ежедневно. Аренда от 20₾. Ждем вас!">
   <link rel="canonical" href="/" />
+
+  <meta property="og:url" content="https://tbilisi-sup.ge/">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Sup surfing в Тбилиси | Аренда sup-досок">
+  <meta property="og:description"
+    content="Sup surfing в Тбилиси: прогулки на sup бордах, аренда досок, организация однодневных туров. Работаем ежедневно. Аренда от 20₾. Ждем вас!">
+  <meta property="og:image" content="./images/instagramm/8-inst.webp">
 </head>
 
 <body class="body" id="top">
