--- a/supsurfing-en.html
+++ b/supsurfing-en.html
@@ -18,6 +18,7 @@
   <link rel="stylesheet" href="./css/main.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 
+  <link rel="icon" sizes="120x120" href="/120x120-fav.ico" type="image/x-icon">
   <link rel="icon" sizes="120x120" href="./images/favicon/120x120-fav.ico" type="image/x-icon">
   <link rel="icon" href="./images/favicon/favicon-48x48.ico">
   <link rel="shortcut icon" href="./images/logo/favicon.ico">
@@ -31,8 +32,16 @@
   <title>Sup surfing in Tbilisi | Rental sup boards</title>
   <meta name="description"
     content="Sup surfing in Tbilisi: supboard trips, supboards for rent, organization of one-day tours. Open daily. Price from 20 ₾. Book a supsurf trip!">
+  <link rel="canonical" href="/supsurfing-en.html" />
+
+  <meta property="og:url" content="https://tbilisi-sup.ge/supsurfing-en.html">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Sup surfing in Tbilisi | Rental sup boards">
+  <meta property="og:description"
+    content="Sup surfing in Tbilisi: supboard trips, supboards for rent, organization of one-day tours. Open daily. Price from 20 ₾. Book a supsurf trip!">
+  <meta property="og:image" content="./images/instagramm/8-inst.webp">
 </head>
-<link rel="canonical" href="/supsurfing-en.html" />
+
 
 <body class="body" id="top">
 
