--- a/supsurfing-en.html
+++ b/supsurfing-en.html
@@ -40,18 +40,29 @@
   <meta property="og:description"
     content="Sup surfing in Tbilisi: supboard trips, supboards for rent, organization of one-day tours. Open daily. Price from 20 ₾. Book a supsurf trip!">
   <meta property="og:image" content="./images/instagramm/8-inst.webp">
+
+  <!-- Google Tag Manager -->
+  <script>(function (w, d, s, l, i) {
+      w[l] = w[l] || []; w[l].push({
+        'gtm.start':
+          new Date().getTime(), event: 'gtm.js'
+      }); var f = d.getElementsByTagName(s)[0],
+        j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+          'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+    })(window, document, 'script', 'dataLayer', 'GTM-M2X24GW');</script>
+  <!-- End Google Tag Manager -->
 </head>
 
-
 <body class="body" id="top">
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-M2X24GW" height="0" width="0"
+      style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
 
   <header class="header">
-
     <a href="#top">
       <img src="./images/logo/logo-2.svg" alt="sup.ge logo" class="logo header__logo">
     </a>
-
-
 
     <div class="header__burger">
       <div id="menuToggle" class="menuToggle">
