--- a/index.html
+++ b/index.html
@@ -40,17 +40,29 @@
   <meta property="og:description"
     content="Sup surfing в Тбилиси: прогулки на sup бордах, аренда досок, организация однодневных туров. Работаем ежедневно. Аренда от 20₾. Ждем вас!">
   <meta property="og:image" content="./images/instagramm/8-inst.webp">
+
+  <!-- Google Tag Manager -->
+  <script>(function (w, d, s, l, i) {
+      w[l] = w[l] || []; w[l].push({
+        'gtm.start':
+          new Date().getTime(), event: 'gtm.js'
+      }); var f = d.getElementsByTagName(s)[0],
+        j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+          'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+    })(window, document, 'script', 'dataLayer', 'GTM-M2X24GW');</script>
+  <!-- End Google Tag Manager -->
 </head>
 
 <body class="body" id="top">
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-M2X24GW" height="0" width="0"
+      style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
 
   <header class="header">
-
     <a href="#top">
       <img src="./images/logo/logo-2.svg" alt="sup.ge logo" class="logo header__logo">
     </a>
-
-
 
     <div class="header__burger">
       <div id="menuToggle" class="menuToggle">
@@ -62,7 +74,6 @@
 
       </div>
     </div>
-
 
     <div class="header__controls header__controls_hidden">
       <div class="header__nav navigation">
@@ -631,6 +642,7 @@
       ]
     }
     </script>
+
 </body>
 
 </html>
