remove GA, fix phone numbers

--- a/geo.html
+++ b/geo.html
@@ -298,7 +298,7 @@
           <div class="gift__card gift-card">
             <div class="gift-card__head">
               <img src="./images/logo/logo.svg" alt="" class="gift-card__logo">
-              <a href="tel:+66755" class="gift-card__tel">+995 599 167 632</a>
+              <a href="tel:+995599167632" class="gift-card__tel">+995 599 167 632</a>
             </div>
             <div class="gift-card__body">
               <h5 class="title gift-card__title">ასაჩუქრე სერტიფიკატი</h5>
@@ -465,7 +465,7 @@
           <div class="contacts__text">
             <p class="text">ქ. თბილისი, საქართველო თბილისის ზღვა</p>
             <p class="text">კოორდინატები: PRVQ+2QF</p>
-            <a href="tel:++995599167632" class="text contacts__link">+995 599 16 76 32</a>
+            <a href="tel:+995599167632" class="text contacts__link">+995 599 16 76 32</a>
             <a href="mailto:offers@tbilisi-sup.ge" class="text contacts__link link__underline">offers@tbilisi-sup.ge</a>
           </div>
           <div class="contacts__social social">
@@ -532,7 +532,7 @@
 
       <div class="footer__row">
         <div class="footer__column">
-          <a href="tel:++995599167632" class="text footer__tel">+995 599 16 76 32</a>
+          <a href="tel:+995599167632" class="text footer__tel">+995 599 16 76 32</a>
         </div>
         <div class="footer__column">
           <h6 class="footer__title">
@@ -558,15 +558,7 @@
   <script>
     !function (d, s, id) { var js, fjs = d.getElementsByTagName(s)[0]; if (!d.getElementById(id)) { js = d.createElement(s); js.id = id; js.src = 'https://weatherwidget.io/js/widget.min.js'; fjs.parentNode.insertBefore(js, fjs); } }(document, 'script', 'weatherwidget-io-js');
   </script>
-  <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-72ENS6JKP1"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date());
 
-    gtag('config', 'G-72ENS6JKP1');
-  </script>
   <!-- Yandex.Metrika counter -->
   <script type="text/javascript">
     (function (m, e, t, r, i, k, a) {
