--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
           <div class="gift__card gift-card">
             <div class="gift-card__head">
               <img src="./images/logo/logo.svg" alt="" class="gift-card__logo">
-              <a href="tel:+66755" class="gift-card__tel">+995 599 167 632</a>
+              <a href="tel:+995599167632" class="gift-card__tel">+995 599 167 632</a>
             </div>
             <div class="gift-card__body">
               <h5 class="title gift-card__title">Подарочный сертификат</h5>
@@ -473,7 +473,7 @@
             <p class="text">г. Тбилиси, Грузия
               Тбилисское море</p>
             <p class="text">Координаты: PRVQ+2QF</p>
-            <a href="tel:++995599167632" class="text contacts__link">+995 599 16 76 32</a>
+            <a href="tel:+995599167632" class="text contacts__link">+995 599 16 76 32</a>
             <a href="mailto:offers@tbilisi-sup.ge" class="text contacts__link link__underline">offers@tbilisi-sup.ge</a>
           </div>
           <div class="contacts__social social">
@@ -540,7 +540,7 @@
 
       <div class="footer__row">
         <div class="footer__column">
-          <a href="tel:++995599167632" class="text footer__tel">+995 599 16 76 32</a>
+          <a href="tel:+995599167632" class="text footer__tel">+995 599 16 76 32</a>
         </div>
         <div class="footer__column">
           <h6 class="footer__title">
@@ -565,16 +565,6 @@
 
   <script>
     !function (d, s, id) { var js, fjs = d.getElementsByTagName(s)[0]; if (!d.getElementById(id)) { js = d.createElement(s); js.id = id; js.src = 'https://weatherwidget.io/js/widget.min.js'; fjs.parentNode.insertBefore(js, fjs); } }(document, 'script', 'weatherwidget-io-js');
-  </script>
-
-  <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-72ENS6JKP1"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date());
-
-    gtag('config', 'G-72ENS6JKP1');
   </script>
 
   <!-- Yandex.Metrika counter -->
